generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// --- ENUMS ---
enum Role {
  pic
  admin
}

enum NotificationType {
  request
  report
  password
  system
}

enum RequestStatus {
  pending
  in_transit
  approved
  rejected
  completed
  cancelled
}

enum ReportType {
  borrow
  transfer
  sell
  demolish
}

enum ItemCondition {
  good
  damaged
  broken
}

enum ItemStatus {
  available
  in_transit
  borrowed
  transferred
  sold
  demolished
}

enum AuditAction {
  CREATE
  UPDATE
  DELETE
  APPROVE
  REJECT
  LOGIN
  LOGOUT
  ARCHIVE
  RESET_PASSWORD_REQUEST
}

enum PasswordResetStatus {
  pending
  approved
  rejected
}

model Users {
  id              Int               @id @default(autoincrement())
  employee_id     String            @unique
  username        String            @unique
  name            String
  role            Role              @default(pic)
  phone_number    String?
  password_hash   String
  is_active       Boolean           @default(true)
  telegram_id     String?
  created_at      DateTime          @default(now())

  requests_as_pic         Requests[]         @relation("PICRequests")
  requests_as_admin       Requests[]         @relation("AdminApprovals")
  requests_as_returner    Requests[]         @relation("UserReturns")
  reports_issued          OfficialReports[]  @relation("ReportIssuer")
  reports_approved        OfficialReports[]  @relation("ReportApprover")
  notifications           Notifications[]
  password_resets         PasswordResets[]   @relation("UserPasswordResets")
  password_resets_admin   PasswordResets[]   @relation("AdminPasswordResets")
  logs_moved              ItemLogHistory[]
  audit_logs              AuditLogs[]
  items_as_pic            ItemMasters[]      @relation("ItemPIC")
}

model ItemMasters {
  id                 Int               @id @default(autoincrement())
  name               String            
  model_code         String            @unique
  category           String
  procurement_year   Int
  created_at         DateTime          @default(now())

  pic_id             Int?
  pic                Users?            @relation("ItemPIC", fields: [pic_id], references: [id])

  photos             ItemPhotos[]
  units              ItemUnits[]      
}

model ItemUnits {
  id            Int           @id @default(autoincrement())
  unit_code     String        @unique
  condition     ItemCondition @default(good)
  status        ItemStatus    @default(available)
  
  item_id       Int
  item          ItemMasters         @relation(fields: [item_id], references: [id], onDelete: Cascade)

  location_id   Int
  location      Locations     @relation(fields: [location_id], references: [id])

  request_items RequestItems[]
  log_histories ItemLogHistory[]
}

model Locations {
  id              Int               @id @default(autoincrement())
  location_code   String            @unique
  building_name   String
  floor           Int
  address         String            @db.Text

  item_units              ItemUnits[]
  requests_destination    Requests[]         @relation("RequestDestination")
  requests_return         Requests[]         @relation("RequestReturn")
  logs_from               ItemLogHistory[]   @relation("FromLocation")
  logs_to                 ItemLogHistory[]   @relation("ToLocation")
}

model Requests {
  id                      Int            @id @default(autoincrement())
  request_code            String         @unique
  request_type            ReportType
  reason                  String         @db.Text
  status                  RequestStatus  @default(pending)
  approved_at             DateTime?
  created_at              DateTime       @default(now())

  destination_location_id Int?
  destination_location    Locations?     @relation("RequestDestination", fields: [destination_location_id], references: [id])

  returned_at             DateTime?
  return_location_id      Int?
  return_location         Locations?     @relation("RequestReturn", fields: [return_location_id], references: [id])
  returned_by_id          Int?
  returned_by             Users?         @relation("UserReturns", fields: [returned_by_id], references: [id])

  pic_id        Int
  pic           Users          @relation("PICRequests", fields: [pic_id], references: [id])
  
  admin_id      Int?
  admin         Users?         @relation("AdminApprovals", fields: [admin_id], references: [id])

  request_items RequestItems[]
  report        OfficialReports?
  log_histories ItemLogHistory[]
}


model RequestItems {
  id          Int      @id @default(autoincrement())
  request_id  Int
  request     Requests @relation(fields: [request_id], references: [id])
  
  unit_id     Int      // BERUBAH: Dari item_id
  unit        ItemUnits @relation(fields: [unit_id], references: [id])
}

model ItemPhotos {
  id          Int      @id @default(autoincrement())
  file_path   String
  uploaded_at DateTime @default(now())

  item_id     Int
  item        ItemMasters    @relation(fields: [item_id], references: [id])
}

model OfficialReports {
  id            Int      @id @default(autoincrement())
  report_number String   @unique
  report_type   ReportType
  issued_date   DateTime @default(now())
  file_path     String
  created_at    DateTime @default(now())
  
  is_approved   Boolean  @default(false)
  approved_by_id Int?
  approved_by   Users?   @relation("ReportApprover", fields: [approved_by_id], references: [id])
  approved_at   DateTime?

  request_id    Int      @unique
  request       Requests @relation(fields: [request_id], references: [id])
  
  issued_by_id  Int
  issued_by     Users    @relation("ReportIssuer", fields: [issued_by_id], references: [id])
}

model ItemLogHistory {
  id                Int      @id @default(autoincrement())
  moved_at          DateTime @default(now())

  unit_id           Int      // BERUBAH: Dari item_id
  unit              ItemUnits @relation(fields: [unit_id], references: [id])

  from_location_id  Int
  from_location     Locations @relation("FromLocation", fields: [from_location_id], references: [id])

  to_location_id    Int
  to_location       Locations @relation("ToLocation", fields: [to_location_id], references: [id])

  request_id        Int?
  request           Requests? @relation(fields: [request_id], references: [id])

  moved_by_id       Int
  moved_by          Users     @relation(fields: [moved_by_id], references: [id])
}

model Notifications {
  id          Int                @id @default(autoincrement())
  message     String             @db.Text
  type        NotificationType
  created_at  DateTime           @default(now())

  user_id     Int
  user        Users               @relation(fields: [user_id], references: [id])
}


model PasswordResets {
  id                Int                   @id @default(autoincrement())
  status            PasswordResetStatus   @default(pending)
  new_password_hash String
  created_at        DateTime              @default(now())
  approved_at       DateTime?
  
  user_id           Int
  user              Users                 @relation("UserPasswordResets", fields: [user_id], references: [id])
  
  admin_id          Int?
  admin             Users?                @relation("AdminPasswordResets", fields: [admin_id], references: [id])
}

model AuditLogs {
  id            Int          @id @default(autoincrement())
  
  // Aktor - Berelasi ke tabel Users
  actor_id      Int
  actor         Users        @relation(fields: [actor_id], references: [id])
  actor_role    Role         // Menyimpan role saat kejadian (snapshot)
  
  // Aksi (Melakukan apa)
  action        AuditAction
  
  // Entitas (Terhadap objek apa)
  // entity_type diisi string nama model: 'Items', 'Requests', dsb.
  entity_type   String       
  entity_id     Int          
  
  // Metadata tambahan
  description   String?      @db.Text
  user_agent    String?      // Contoh: "Mozilla/5.0... (Chrome)"
  created_at    DateTime     @default(now())
}